--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <canvas class="canvas"></canvas>
     <main>
-        <form class="controls">
+        <form class="controls" data-count="0">
             <div class="control-properties">
                 <div class="property-wrapper">
                     <label for="ResolutionInput">Resolution:</label>
@@ -42,10 +42,11 @@
                     <button type="button" class="pause-animate-btn js-pause-animate-btn">Pause</button>
                 </div>
             </div>
-        </form>
-        <section class="process-notification-display js-process-notification-display">
+            <section class="process-notification-display js-process-notification-display">
         
-        </section>
+            </section>
+        </form>
+        
     </main>
 </body>
 </html>
