--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <form class="controls" data-count="0">
             <div class="control-properties">
                 <div class="property-wrapper">
+                    <label for="StartXInput">X-axis (0-1):</label>
+                    <input type="number" name="startX" value="0.5" max="1" min="0" id="StartXInput" autocomplete="off">
+                </div>
+                <div class="property-wrapper">
+                    <label for="StartYInput">Y-axis (0-1):</label>
+                    <input type="number" name="startY" value="0.5" max="1" min="0" id="StartYInput" autocomplete="off">
+                </div>
+                <div class="property-wrapper">
                     <label for="ResolutionInput">Resolution:</label>
                     <input type="number" name="resolution" value="1" id="ResolutionInput" autocomplete="off">
                 </div>
