adding pointer position and cleaning code

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <form class="controls" data-count="0">
             <div class="control-properties">
                 <div class="property-wrapper">
-                    <label for="StartXInput">X-axis (0-1):</label>
+                    <label for="StartXInput">X-axis:</label>
                     <input type="number" name="startX" value="0.5" max="1" min="0" id="StartXInput" autocomplete="off">
                 </div>
                 <div class="property-wrapper">
-                    <label for="StartYInput">Y-axis (0-1):</label>
+                    <label for="StartYInput">Y-axis:</label>
                     <input type="number" name="startY" value="0.5" max="1" min="0" id="StartYInput" autocomplete="off">
                 </div>
                 <div class="property-wrapper">
