--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                     <label for="PrimeColorInput">Prime Color</label>
                     <input type="color" name="primeColor" value="#ff0000" id="PrimeColorInput"  autocomplete="off">
                 </div>
+                <div class="property-wrapper">
+                    <label for="PrimeColorInput">Background Color</label>
+                    <input type="color" name="backgroundColor" value="#000000" id="BackgroundColorInput"  autocomplete="off">
+                </div>
             </div>
             <div class="control-buttons">
                 <button type="button" class="calculate-btn js-calculate-btn">Calculate</button>
