playing with ui design

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     
     <main>
         <form class="controls" data-count="0">
+            <div class="presets">
+                <p>Presets</p>
+                <button type="button" data-preset="1">1</button>
+                <button type="button" data-preset="2">2</button>
+                <button type="button" data-preset="3">3</button>
+                <button type="button" data-preset="4">4</button>
+                <button type="button" data-preset="5">5</button>
+<!-- 
+                <input type="button" value="100" id="" data-preset>
+                <input type="button" value="500" id="" data-preset>
+                <input type="button" value="1,000" id="" data-preset>
+                <input type="button" value="100,000" id="" data-preset> -->
+            </div>
             <div class="control-properties">
                 <div class="property-wrapper">
                     <label for="StartXInput">Start X:</label>
